2012-11-22 Romain Francois <romain@r-enthusiasts.com>

        * include/Rcpp/iostream.h: use delete rdbuf() as recommended by Martyn Plummer
        * include/Rcpp/sugar/functions/self_match.h: self_match, giving a
        functionality similar to match( x, unique(x) )
        * src/coerce.cpp: added coercion to STRSXP
        * include/Rcpp/internal/r_coerce.h : added r_coerce<.,STRPSXP>
        * include/Rcpp/sugar/functions/table.h: sugar table
        * include/Rcpp/sugar/functions/duplicated.h: sugar duplicated
        
2012-11-21  JJ Allaire <jj@rstudio.org>

        * R/Rcpp.package.skeleton.R: add 'attributes' and 'cpp_files'
        parameters to Rcpp.pacakge.skeleton
        * inst/skeleton/rcpp_hello_world_attributes.cpp: version of hello world
        that uses attributes
        * man/Rcpp.package.skeleton.Rd: doc updates
        * inst/doc/Rcpp-attributes/Rcpp-attributes.Rnw: doc updates
        * DESCRIPTION: bump version to 0.10.0.3

2012-11-21  Dirk Eddelbuettel  <edd@debian.org>

	* inst/examples/Misc/piBySimulation.r: New simple example using Rcpp
	attributes in a 'compute pi by simulation in R and C++' exercise
	* inst/examples/Misc/piSugar.cpp: Corresponding C++ variant

2012-11-21  Romain Francois <romain@r-enthusiasts.com>

        * include/Rcpp/iostream/Rostream.h: Fix warning given by -Wreorder
        * include/Rcpp/sugar/functions/mapply/mapply_3.h: more flexible
        * include/Rcpp/vector/Vector.h: More efficient assign_object, which is 
        used in the assignment operator
        * include/Rcpp/sugar/functions/clip.h: added clip function

2012-11-20  JJ Allaire <jj@rstudio.org>

        * src/Attributes.cpp: ensure dynlib cache state is always updated
        * inst/doc/Rcpp-attributes/Rcpp-attributes.Rnw: elaborate further
        on exporting C++ interfaces from packages

2012-11-20  Romain Francois <romain@r-enthusiasts.com>

        * include/Rcpp/iostream/Rostream.h: change order of initiaization in