@@ -21,6 +21,8 @@
             \item New helper class \code{no_init} that can be used to 
             create a vector without initializing its data, e.g. : 
             \code{ IntegerVector out = no_init(n) ; }
+            \item New exception constructor requiring only a message; stop
+            function to throw an exception
         }
         \item Changes in Rcpp attributes: 
         \itemize{
